
$Id: History,v 1.4 1999-11-24 20:17:20 japost Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

   Please keep a summary of these message in geometry/History!

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
 Nov 24   1999 				geom-solid-bool-V00-01-05

  - Small fix in src/G4DisplacedSolid.cc to the return type 
         (const G4AffineTransform --> G4AffineTransform)
    to conform with the specification of the class.

 Nov 19   1999                          geom-solid-bool-V00-01-04

  -  Fixes from Vladimir, and additional tests

 Nov 10   1999                          geom-solid-bool-V00-01-03b

  - Renamed  GetConstituentSolid to GetConstituentMovedSolid in G4DisplacedSolid
     to avoid clashing with method that gets the contituents of a G4BooleanSolid.

 Nov 10   1999                          geom-solid-bool-V00-01-03a

  - Tag with additional methods for Persistency

 Nov 10   1999                          geom-solid-bool-V00-01-03-cand

  New method: Get Object Rotation/Translation methods in Displaced Solid

 Nov  9   1999                          geom-solid-bool-V00-01-02-cand
  
  - Tag with additional methods for Visualisation

   G4DisplacedSolid,  G4BooleanSolid

      Added methods to access data members: